Fixed pagination bar to the bottom of the page so that it does not jump around depending on the size of the table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,11 @@ $warning: #7EA16B;
 @import 'faxes';
 @import 'flatpickr';
 
+.fixed-bottom {
+	margin-left: 212px;
+	margin-bottom: 40px;
+}
+
 .page-link {
 	width: 46px;
 }
